need to fix scroll bar spacing and styling

--- a/tunnel/comps/Story/Story.module.scss
+++ b/tunnel/comps/Story/Story.module.scss
@@ -8,7 +8,7 @@
     height: 55vh;
     width: auto;
     border-collapse: separate; 
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
     // overflow-y: hidden;
     transition: all 0.3s ease-in-out;
     box-shadow: 0px 0px #000;
